<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userDetail"
            type="com.javiersc.githubdemo.database.entity.UserDetail" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/collapsing_height"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:statusBarScrim="@color/colorPrimary">

                <ImageView
                    android:id="@+id/imageViewAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_description_user_avatar"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="16:10"
                    app:url="@{userDetail.avatar_url}" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.3"
                    android:background="@android:color/black" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:theme="@style/ToolbarStyle"
                    app:title="@{userDetail.name}"
                    app:titleTextColor="@android:color/white" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/google_sans_regular"
                        android:text="@string/company"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_medium"
                        android:text="@{userDetail.company}"
                        android:textColor="?colorOnBackground"
                        android:textSize="16sp"
                        tools:text="@string/company" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/google_sans_regular"
                        android:text="@string/location"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_medium"
                        android:text="@{userDetail.location}"
                        android:textColor="?colorOnBackground"
                        android:textSize="16sp"
                        tools:text="@string/location" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/google_sans_regular"
                        android:text="@string/email"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_medium"
                        android:text='@{userDetail.email ?? @string/private_email}'
                        android:textColor="?colorOnBackground"
                        android:textSize="16sp"
                        tools:text="@string/email" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/google_sans_regular"
                        android:text="@string/blog"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_medium"
                        android:text="@{userDetail.blog}"
                        android:textColor="?colorOnBackground"
                        android:textSize="16sp"
                        tools:text="@string/blog" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/google_sans_regular"
                        android:text="@string/user_type"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_medium"
                        android:text="@{userDetail.type}"
                        android:textColor="?colorOnBackground"
                        android:textSize="16sp"
                        tools:text="@string/user_type" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/google_sans_regular"
                        android:text="@string/followers"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_medium"
                        android:text="@{userDetail.followers.toString()}"
                        android:textColor="?colorOnBackground"
                        android:textSize="16sp"
                        tools:text="@string/following" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/google_sans_regular"
                        android:text="@string/following"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_medium"
                        android:text="@{userDetail.following.toString()}"
                        android:textColor="?colorOnBackground"
                        android:textSize="16sp"
                        tools:text="@string/following" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/google_sans_regular"
                        android:text="@string/bio"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_medium"
                        android:text="@{userDetail.bio}"
                        android:textColor="?colorOnBackground"
                        android:textSize="16sp"
                        tools:text="@string/bio" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>